--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
                     Comidas del fin <br> del mundo
                 </h1>
                 <p class="my-5">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, accusamus iusto quibusdam
-                    dignissimos labore sequi. Cupiditate reiciendis eius dolore, illum adipisci harum voluptas iste
-                    mollitia inventore provident labore voluptatum nemo.
+                     Explora y descubre sabores auténticos y fascinantes de todo el mundo.
+                     te invitamos a un viaje culinario donde cada plato cuenta una historia única.
+                     Únete a nuestra comunidad apasionada y disfruta de la diversidad gastronómica global con nosotros.
                 </p>
                 <div class="mb-5 pb-5">
                     <button class="btn btn-lg btn-outline-info text-light me-4">Trabajos</button>
