se cambia posicion de boton

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </h1>
                 <p class="my-5">
                      Explora y descubre sabores auténticos y fascinantes de todo el mundo.
-                     te invitamos a un viaje culinario donde cada plato cuenta una historia única.
+                      te invitamos a un viaje culinario donde cada plato cuenta una historia única.
                      Únete a nuestra comunidad apasionada y disfruta de la diversidad gastronómica global con nosotros.
                 </p>
                 <div class="mb-5 pb-5">
@@ -202,7 +202,7 @@
                 <textarea class="form-control" placeholder="Escribe aquí tu mensaje"></textarea>
             </div>
 
-            <div class="my-3 text-end">
+            <div class="my-3 text-center">
                 <button class="btn btn-info text-light">Enviar</button>
             </div>
 
