--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                      Únete a nuestra comunidad apasionada y disfruta de la diversidad gastronómica global con nosotros.
                 </p>
                 <div class="mb-5 pb-5">
-                    <button class="btn btn-lg btn-outline-info text-light me-4">Trabajos</button>
+                    <button class="btn btn-lg btn-outline-info text-light me-4 btn-info">Trabajos</button>
                     <button class="btn btn-lg btn-info text-light">Contacto</button>
                 </div>
             </div>
