--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     </section>
 
 
-    <section id="Mis-trabajos" class="my-5 p-5 bg-info">
+    <section id="Mis-trabajos" class="my-5 p-5 fondo-mistrabajos">
 
         <h2 class="display-4 fw-bold text-center text-light mb-3">Mis trabajos</h2>
 
@@ -127,7 +127,7 @@
                             repudiandae neque rem adipisci repellendus libero illo quo
                             blanditiis, velit quasi ad, recusandae voluptates officia.
                         </p>
-                        <button type="button" class="btn btn-outline-info">
+                        <button type="button" class="btn btn-outline-info btn-mistrabajos">
                             Ver más
                         </button>
                     </div>
@@ -144,7 +144,7 @@
                             consequatur quos error fuga excepturi quo. Laudantium optio
                             pariatur laboriosam modi, ea molestias?
                         </p>
-                        <button type="button" class="btn btn-outline-info">
+                        <button type="button"  class="btn btn-outline-info btn-mistrabajos">
                             Ver más
                         </button>
                     </div>
@@ -161,7 +161,7 @@
                             corporis facilis qui architecto dolor, accusamus eveniet
                             exercitationem fugit. Quod autem neque ducimus.
                         </p>
-                        <button type="button" class="btn btn-outline-info">
+                        <button type="button" class="btn btn-outline-info btn-mistrabajos">
                             Ver más
                         </button>
                     </div>
